--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <p>HELLO</p>
 <p>text</p>
 <p>text</p>
-<<<<<<< HEAD
 <h1>Заголовок в новой ветке</h1>
-=======
-<p>branch master</p>
->>>>>>> master
+<p>branch master222</p>
+<p>branch master new</p>
+<p>texttexttext</p>
+<p>texttexttext11</p>
   </body>
 </html>
