--- a/index.html
+++ b/index.html
@@ -8,10 +8,7 @@
 <p>HELLO</p>
 <p>text</p>
 <p>text</p>
-<h1>Заголовок в новой ветке</h1>
+<h1>Заголовок в новой ветке11</h1>
 <p>branch master222</p>
-<p>branch master new</p>
-<p>texttexttext</p>
-<p>texttexttext11</p>
   </body>
 </html>
