--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
 <p>text</p>
 <p>text</p>
 <h1>Заголовок в новой ветке11</h1>
-<p>branch master22233</p>
-<p>branch master22233</p>
-<p>branch master22233</p>
+<h1>TEST</h1>
   </body>
 </html>
