add page avatar

--- a/index.html
+++ b/index.html
@@ -2,14 +2,19 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Моя страница</title>
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="fonts/fonts.css">
     <link rel="stylesheet" href="css/style.css">
+    <title>Анатолий Анатольев</title>
   </head>
   <body>
-<p>HELLO</p>
-<p>text</p>
-<p>text</p>
-<h1>Заголовок в новой ветке11</h1>
-<h1>TEST</h1>
+    <div class="avatar">
+    <div class="photo"><img src="img/ava.png" alt=""></div>
+    <div class="block">
+      <a href="about.html" class="link">Перейти на сайт</a>
+    </div>
+    <p class="name">Анатолий Анатольев</p>
+    </div>
+
   </body>
 </html>
