--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <div class="avatar">
-    <div class="photo"><img src="img/ava.png" alt=""></div>
+    <div class="photo"><img src="img/Ava.png" alt=""></div>
     <div class="block">
       <a href="about.html" class="link">Перейти на сайт</a>
     </div>
